deployments/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ldstapi-deployment
spec:
  selector:
    matchLabels:
      app: ldstapi-pod
  template:
    metadata:
      labels:
        app: ldstapi-pod
    spec:
      containers:
        - name: ldstapi-container
          image: hardy4787/ldstapi:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
