deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ldstapi
spec:
  selector:
    matchLabels:
      app: ldstapi
  template:
    metadata:
      labels:
        app: ldstapi
    spec:
      containers:
        - name: ldstapi-container
          image: hardy4787/ldstapi
          imagePullPolicy: Always
          ports:
            - containerPort: 80
