deployments/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ldstui-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: ldstui-pod
  type: ClusterIP
