deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ldstapi
  labels:
    run: ldstapi
spec:
  selector:
    app: ldstapi
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
  type: LoadBalancer
