deployments/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ldstapi-ingress
spec:
  rules:
    - host: backend.minikube.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ldstapi-service
                port:
                  number: 80
